@@ -1,17 +1,22 @@
+import com.install4j.gradle.Install4jTask
+
 plugins {
     id "application"
-    id "com.github.johnrengelman.shadow" version "7.1.2"
-    id "com.install4j.gradle" version "11.0.5"
-    id "de.undercouch.download" version "5.6.0"
+    alias(libs.plugins.shadow)
+    alias(libs.plugins.install4j)
+    alias(libs.plugins.download)
 }
 
-archivesBaseName = "$group-$name"
-mainClassName = "org.triplea.game.client.HeadedGameRunner"
-
-ext {
-    releasesDir = file("$buildDir/releases")
-    releaseVersion = getProductVersion() + "+" + getCommitNumber()
+application {
+    mainClass = "org.triplea.game.client.HeadedGameRunner"
+    applicationDefaultJvmArgs = [
+            //This flag fixes touch gestures in Java-21；Technical Reference: https://stackoverflow.com/questions/48535595/what-replaces-gestureutilities-in-java-9
+            "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED"
+    ]
 }
+
+def releasesDir = file("$buildDir/releases")
+def releaseVersion = getProductVersion() + "+" + getCommitNumber()
 
 dependencies {
     implementation project(":game-app:ai")
@@ -27,76 +32,82 @@ dependencies {
 }
 
 jar {
+    archiveBaseName = "$group-$name"
     manifest {
-        attributes "Main-Class": mainClassName
+        attributes "Main-Class": application.mainClass
     }
 }
 
-clean.doFirst {
-  delete "$projectDir/.assets/"
-  delete "$projectDir/assets/"
+def assetsZipFileName = "game_headed_assets.zip"
+def downloadAssets = tasks.register("downloadAssets", de.undercouch.gradle.tasks.download.Download) {
+    src "https://github.com/triplea-game/assets/releases/download/47/$assetsZipFileName"
+    dest project.layout.buildDirectory.dir("downloads/assets-zip")
+    overwrite false
+    onlyIfModified true
+    quiet true
 }
 
-task downloadAssets {
-    doLast {
-        download.run {
-            src "https://github.com/triplea-game/assets/releases/download/47/game_headed_assets.zip"
-            dest "$projectDir/.assets/assets.zip"
-            overwrite false
-        }
-        copy {
-            from zipTree(file("$projectDir/.assets/assets.zip"))
-            into "$projectDir/assets/"
-        }
+def unzipAssets = tasks.register("unzipAssets", Copy) {
+    from zipTree(downloadAssets.map { it.outputs.files.singleFile })
+    into project.layout.buildDirectory.dir("assets")
+}
+
+tasks.named("processResources", ProcessResources) {
+    from(unzipAssets) {
+        into("assets")
     }
 }
 
+def platformInstallers = tasks.register("platformInstallers", Install4jTask) {
+    group = "release"
+    description = "creates installer files using install4j (eg: install.exe)"
+    dependsOn(shadowJar)
 
-run {
-    dependsOn downloadAssets
-}
-
-runShadow {
-    dependsOn downloadAssets
-}
-
-task platformInstallers(
-    type: com.install4j.gradle.Install4jTask,
-    group: "release",
-    dependsOn: [shadowJar]) {
     projectFile = file("build.install4j")
     release = releaseVersion
-    license="$System.env.INSTALL4J_LICENSE_KEY"
+    license = "$System.env.INSTALL4J_LICENSE_KEY"
     doLast {
         ant.chmod(dir: releasesDir, perm: "+x", includes: "*.sh")
     }
 }
 
-task portableInstaller(type: Zip, group: "release", dependsOn: shadowJar) {
+def portableInstaller = tasks.register("portableInstaller", Zip) {
+    group = "release"
+
     from file(".triplea-root")
-    from(file("assets")) {
+    from(unzipAssets) {
         into "assets"
     }
     from(file("dice_servers")) {
         into "dice_servers"
     }
-    from(shadowJar.outputs) {
+    from(shadowJar) {
         into "bin"
     }
 }
 
-// creates installer files using install4j (eg: install.exe)
-task release(group: "release", dependsOn: [portableInstaller, platformInstallers, downloadAssets]) {
-    doLast {
-        publishArtifacts(portableInstaller.outputs.files + [
-            file("$releasesDir/TripleA_${releaseVersion}_macos.dmg"),
-            file("$releasesDir/TripleA_${releaseVersion}_unix.sh"),
-            file("$releasesDir/TripleA_${releaseVersion}_windows-64bit.exe")
-        ])
+tasks.register("release", Copy) {
+    group = "release"
+    dependsOn(platformInstallers)
+
+    from portableInstaller
+    from file("$releasesDir/TripleA_${releaseVersion}_macos.dmg")
+    from file("$releasesDir/TripleA_${releaseVersion}_unix.sh")
+    from file("$releasesDir/TripleA_${releaseVersion}_windows-64bit.exe")
+    into file(project.layout.buildDirectory.dir("artifacts"))
+
+    doFirst {
+        inputs.files.forEach {
+            if (!it.exists()) {
+                throw new GradleException("artifact '$it' does not exist")
+            }
+        }
     }
 }
 
 shadowJar {
+    dependsOn(unzipAssets)
+
     // "archiveVersion" sets the version number on packaged jar files
     // eg: "2.6+105234" in "lobby-server-2.6+50370c.jar"
     archiveVersion = releaseVersion
